--- a/src/admin/view/template/extension/payment/paymentwall.twig
+++ b/src/admin/view/template/extension/payment/paymentwall.twig
@@ -78,7 +78,8 @@
                         <label class="col-sm-2 control-label" for="payment_paymentwall_redirect_payment">{{ text_redirect_payment }}</label>
                         <div class="col-sm-10">
                             <label class="checkbox-inline">
-                                <input type="checkbox" class="form-control" name="payment_paymentwall_redirect_payment" {% if payment_paymentwall_redirect_payment %} checked {% endif %} value="1"/>
+                                <input type="checkbox" class="" name="payment_paymentwall_redirect_payment" {% if payment_paymentwall_redirect_payment %} checked {% endif %} value="1"/>
+                                <small class="form-text text-muted">Redirect user to a Paymentwall hosted checkout instead of embedding it inside the store</small>
                             </label>
                         </div>
                     </div>
