--- a/src/admin/view/template/extension/payment/paymentwall.twig
+++ b/src/admin/view/template/extension/payment/paymentwall.twig
@@ -79,7 +79,7 @@
                         <div class="col-sm-10">
                             <label class="checkbox-inline">
                                 <input type="checkbox" class="" name="payment_paymentwall_redirect_payment" {% if payment_paymentwall_redirect_payment %} checked {% endif %} value="1"/>
-                                <small class="form-text text-muted">Redirect user to a Paymentwall hosted checkout instead of embedding it inside the store</small>
+                                <small class="form-text text-muted">Redirect user to a Paymentwall hosted checkout page instead of embedding it inside the store</small>
                             </label>
                         </div>
                     </div>
