--- a/src/admin/view/template/extension/payment/paymentwall.twig
+++ b/src/admin/view/template/extension/payment/paymentwall.twig
@@ -156,13 +156,12 @@
                         <label class="col-sm-2 control-label" for="payment_paymentwall_use_hosted_page">{{ entry_use_hosted_page }} </label>
                         <div class="col-sm-10">
                             <select name="payment_paymentwall_use_hosted_page" class="form-control">
-                                {% if payment_paymentwall_use_hosted_page %}
-                                <option value="1" selected="selected">{{ text_yes }} </option>
-                                <option value="0">{{ text_no }} </option>
-                                {% else %}
-                                <option value="1">{{ text_yes }} </option>
-                                <option value="0" selected="selected">{{ text_no }} </option>
-                                {% endif %}
+                                <option value="1" {% if payment_paymentwall_use_hosted_page %} selected="selected" {% endif %} >
+                                    {{ text_yes }}
+                                </option>
+                                <option value="0" {% if not payment_paymentwall_use_hosted_page %} selected="selected" {% endif %} >
+                                    {{ text_no }}
+                                </option>
                             </select>
                         </div>
                     </div>
